# ERTS-Pr-TrainControlSystem

./: .env_base  .gitignore  README.md  database.rules.json  pyproject.toml
Database/: pyproject.toml
Database/src/database/.data/: tracks.toml
Database/src/database/erts_firebase/: __init__.py  _db.py  models.py  train.py
Database/src/database/utils/: __init__.py  track_info.py
Firebase/: pyproject.toml
Firebase/src/erts_firebase/: __init__.py  station.py  track.py
Local/: pyproject.toml
Local/src/local/: __init__.py  __main__.py  main.py  train.py
Local/src/local/stop_sensors/: __init__.py  base.py  factory.py  s_button.py  s_camera.py
Local/src/realtime/: __init__.py  mqtt_receiver.py  realtime.c  realtime.out  realtime.py  sensor.c  test_realtime.py
Local/src/realtime/tests/: test.c
Server/: .firebaserc  pyproject.toml
Server/src/server/: __init__.py  __main__.py  gui.py  main.py
scripts/: toggle_local.py
