[project]
name = "local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "agoston-mc", email = "czoboragoston+github-main@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
local = "local:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
