[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "database",
    "pyside6>=6.11.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
database = { workspace = true }
